COSC360/Lab-4-Fakemake/Lab-4-Fakemake/tmp-013-correct-stderr.txt
twofile.c: In function ‘main’:
twofile.c:6:3: warning: implicit declaration of function ‘first_three’ [-Wimplicit-function-declaration]
   first_three();
   ^~~~~~~~~~~
twofile.c: In function ‘main’:
twofile.c:6:3: warning: implicit declaration of function ‘first_three’ [-Wimplicit-function-declaration]
   first_three();
   ^~~~~~~~~~~
first_three.c: In function ‘badproc’:
first_three.c:11:48: error: expected ‘;’ before ‘}’ token
 void badproc() { printf("I forget semi-colons") }
                                                ^~
                                                ;
Command failed.  Exiting
